--- a/src/app/UI/view-models/respuestas/respuestas.component.scss
+++ b/src/app/UI/view-models/respuestas/respuestas.component.scss
@@ -139,6 +139,6 @@ sans-serif;
     position: absolute;
     z-index: 999;
     background-color: rgba(0, 0, 0, 0.871);
-    height: 100%;
+    height: 130vh;
     width: 100%;
 }
