--- a/src/app/UI/view-models/home/componentes/reporte-intentos/reporte-intentos.component.html
+++ b/src/app/UI/view-models/home/componentes/reporte-intentos/reporte-intentos.component.html
@@ -1,24 +1,26 @@
-<table class="table table-striped table-hover ">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Tema</th>
-        <th scope="col">Fecha Inicio</th>
-        <th scope="col">Hora</th>
-        <th scope="col">Promedio</th>
-        <th scope="col">Buenas</th>
-        <th scope="col">Malas</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of listaIntentos; let i=index" >
-        <td>{{i + 1}}</td>
-        <td>{{item.tema}}</td>
-        <td>{{item.fecha | date:'dd/MM/yyyy'}}</td>
-        <td>{{item.fecha | date:'HH:mm:ss'}}</td>
-        <td>{{item.promedio}}</td>
-        <td>{{item.correctas}}</td>
-        <td>{{item.incorrectas}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div style="height: 200px;overflow: scroll;">
+  <table class="table table-fixed ">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Tema</th>
+          <th scope="col">Fecha Inicio</th>
+          <th scope="col">Hora</th>
+          <th scope="col">Promedio</th>
+          <th scope="col">Buenas</th>
+          <th scope="col">Malas</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of listaIntentos; let i=index" >
+          <td>{{i + 1}}</td>
+          <td>{{item.tema}}</td>
+          <td>{{item.fecha | date:'dd/MM/yyyy'}}</td>
+          <td>{{item.fecha | date:'HH:mm:ss'}}</td>
+          <td>{{item.promedio}}</td>
+          <td>{{item.correctas}}</td>
+          <td>{{item.incorrectas}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
