commit ultimos cambios

--- a/src/app/UI/view-models/home/home.component.html
+++ b/src/app/UI/view-models/home/home.component.html
@@ -14,7 +14,7 @@
                         <app-reporte-pastel [datosGrafico]="datosGraficoPie"></app-reporte-pastel>
                     </div>
                     <div class="col-md-8 ">
-                        <app-reporte-intentos [listaIntentos]="listaIntentos"></app-reporte-intentos>
+                        <app-reporte-intentos [listaIntentos]="listaIntentosTabla"></app-reporte-intentos>
                     </div>
                 </div>
             </ng-container>
