--- a/src/app/UI/view-models/home/componentes/reporte-pastel/reporte-pastel.component.html
+++ b/src/app/UI/view-models/home/componentes/reporte-pastel/reporte-pastel.component.html
@@ -1,3 +1,3 @@
-<div>    
-    <canvas #pieCanvas style="height:15vh; width:30vw"></canvas>    
+<div style="height:200px; width:80%">    
+    <canvas #pieCanvas ></canvas>    
 </div>
